connect configuration SwaggerConfig